--- a/Book/web-app/css/custom/common.css
+++ b/Book/web-app/css/custom/common.css
@@ -4,3 +4,10 @@
 .margin-top-20 {
     margin-top: 20px;
 }
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+
